Project

General

Profile

Actions

Bug #13030

closed

Unexpected T_IMEMO object when building with VMDEBUG

Bug #13030: Unexpected T_IMEMO object when building with VMDEBUG

Added by jesus_castello (Jesus Castello) over 9 years ago. Updated over 9 years ago.

Status:
Closed
Target version:
-
[ruby-core:78631]

Description

Hello,
I'm trying to build Ruby 2.4.0-rc1 with VMDEBUG=3 for research purposes, but I'm getting this error.

/home/user/.rubies/ruby-2.4.0-rc1/lib/fileutils.rb:90:in `<module:FileUtils>': method `inspect' called on unexpected T_IMEMO object (0x00000001465ab8 flags=0x701a) (NotImplementedError)
	from /home/user/.rubies/ruby-2.4.0-rc1/lib/fileutils.rb:88:in `<top (required)>'
	from ./tool/mkconfig.rb:20:in `require'
	from ./tool/mkconfig.rb:20:in `<main>'
make: *** [uncommon.mk:644: .rbconfig.time] Error 1

I got a stack trace by putting a breakpoint on rb_raise:

#0  0x000000000047fe4f in rb_raise ()
#1  0x00000000005e35c8 in rb_search_method_entry ()
#2  0x00000000005e2c83 in rb_call0 ()
#3  0x00000000005e37e3 in rb_call ()
#4  0x00000000005e40d2 in rb_funcallv ()
#5  0x00000000004e7dd2 in rb_inspect ()
#6  0x00000000005f16d1 in vm_stack_dump_each ()
#7  0x00000000005f1a0c in rb_vmdebug_debug_print_post ()
#8  0x00000000005d7354 in vm_exec_core ()
#9  0x00000000005ea575 in vm_exec ()
#10 0x00000000005eb1e3 in rb_iseq_eval_main ()
#11 0x0000000000483518 in ruby_exec_internal ()
#12 0x0000000000483641 in ruby_exec_node ()
#13 0x0000000000483614 in ruby_run_node ()
#14 0x00000000004183c1 in main ()

Thank you.

Updated by jesus_castello (Jesus Castello) over 9 years ago Actions #1 [ruby-core:78632]

  • Subject changed from Unexpected T_IMEMO object when building with VMDEBUG > 2 to Unexpected T_IMEMO object when building with VMDEBUG

Updated by jesus_castello (Jesus Castello) over 9 years ago Actions #2

  • Description updated (diff)

Updated by shyouhei (Shyouhei Urabe) over 9 years ago Actions #3 [ruby-core:78760]

  • Status changed from Open to Assigned
  • Assignee set to ko1 (Koichi Sasada)

Updated by ko1 (Koichi Sasada) over 9 years ago Actions #4

  • Status changed from Assigned to Closed

Applied in changeset r57427.


skip T_IMEMO for VMDEBUG

  • vm_dump.c (vm_stack_dump_each): skip T_IMEMO object to display
    for VMDEBUG=3. [Bug #13030]

Updated by naruse (Yui NARUSE) over 9 years ago Actions #5 [ruby-core:80099]

  • Backport changed from 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN to 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN, 2.4: DONE

ruby_2_4 r57938 merged revision(s) 57427.

Actions

Also available in: PDF Atom